                   ----------------------------------------
                   | CHANGES of the numericalsgps package |
                   ----------------------------------------
1.1.11 -> deb
- added WittCoefficients for a univariate polynomial

1.1.10 -> 1.1.11
- various small fixes and improvements
- fixed a problem in ArfGoodSemigroupClosure (Thanks Nicola Maugeri!)
- updates in the manual and in the test file
- Travis integration updated (Thanks Max Horn!)
- added functions for random semigroups with genus
- added functions for afine semigroups with a finite number of gaps (generalized numerical semigroups) -- mostly contributions of Carmelo Cisto
- improved the SmallElements method for a numerical semigroup given by generators. (The improvment goes beyond the order of 20 in most examples.)	   
1.1.9 -> 1.1.10
- added the global function ElementsUpTo
- avoid duplication of tests in some methods
- avoid using obsolete 'Tuple' (Thanks Max Horn!)
1.1.8 -> 1.1.9
- avoid differences in the output when all packages are loaded (the order of the pairs in representations is not relevant)
- small fixes (Irreducibles, PseudoFrobenius, OmegaPrimalityOfElement*)
- mark some functions as obsolet, namely: NumericalSemigroupByMinimalGenerators
- Updates in the manual. This includes: fixing typos; adding text (mainly in the introduction of chapters or sections); adding links.
- reference to external packages in the banner (and decrease the Info level ...
- updates in the test file (in part to improve code coverage)
- shortnames for various functions (e.g. CatenaryDegree, TameDegree, elasticity functions)
- added ElasticityOfFactorizationsElementWRTAffineSemigroup
- added Weight of a numerical semigroup
- MinimalGenerators (for good semigroups) -> MinimalGoodGenerators
- PrimitiveElements (which was part of the name of several functions) -> DegreesOfPrimitiveElements
- Fixed inconsistency in the function ForcedIntegersForPseudoFrobenius (pointed out by I. Ojeda) 