@@ -48,7 +48,7 @@ A. Sammartano implemented the following functions.
 
 <Section><Heading>Functions implemented by C. O'Neill</Heading>
 
-C. O'Neill implemented the following functions described in <Cite Key="B-P-ON"></Cite>:
+Chris implemented the following functions described in <Cite Key="B-P-ON"></Cite>:
 
 <P/>
 <Ref Func="OmegaPrimalityOfElementListInNumericalSemigroup"/>,
@@ -75,6 +75,11 @@ C. O'Neill implemented the following functions described in <Cite Key="B-P-ON"><
 
 <P/>
 <Ref Func="DeltaSetOfAffineSemigroup"/>.
+
+Also he implemented the new version of 
+
+<P/>
+<Ref Func="AperyListOfNumericalSemigroupWRTElement"/>.
 
 
 </Section>
