@@ -2,6 +2,7 @@
                    | CHANGES of the numericalsgps package |
                    ----------------------------------------
 1.1.11 -> deb
+- New implementation of AperyListOfNumericalSemigroupWRTElement by Chris O'Neill (this affects the speed of many other functions in the package)
 - added WittCoefficients for a univariate polynomial
 
 1.1.10 -> 1.1.11
